[gd_scene load_steps=8 format=3 uid="uid://bqhq1m3vky18d"]

[ext_resource type="Texture2D" uid="uid://tacy0qxgfb76" path="res://Enemy/Enemylogo_square.webp" id="1_2pb1h"]
[ext_resource type="Script" uid="uid://clhphkqftgrxp" path="res://Enemy/enemy.gd" id="1_px1sc"]
[ext_resource type="AudioStream" uid="uid://cf34ygl6wtuf0" path="res://asset/audio/enemy/possessing.mp3" id="3_am0pq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_px1sc"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_am0pq"]
radius = 85.1469

[sub_resource type="CircleShape2D" id="CircleShape2D_eqilm"]
radius = 19.0263

[sub_resource type="CircleShape2D" id="CircleShape2D_ncf7h"]
radius = 125.1

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_px1sc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.1875, 0.5625)
scale = Vector2(0.0417987, 0.0394216)
texture = ExtResource("1_2pb1h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_px1sc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_am0pq")

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Deadzone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deadzone"]
shape = SubResource("CircleShape2D_eqilm")

[node name="DamageCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="ChasePlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChasePlayer"]
shape = SubResource("CircleShape2D_ncf7h")

[node name="Possessing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_am0pq")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="body_entered" from="Deadzone" to="." method="_on_deadzone_body_entered"]
[connection signal="body_exited" from="Deadzone" to="." method="_on_deadzone_body_exited"]
[connection signal="timeout" from="DamageCooldownTimer" to="." method="_on_damage_cooldown_timer_timeout"]
[connection signal="area_entered" from="ChasePlayer" to="." method="_on_ChasePlayer_body_entered"]
[connection signal="area_exited" from="ChasePlayer" to="." method="_on_ChasePlayer_body_exited"]
